Fixed the trade button overlapping issue.

--- a/web/src/components/Sidebar/_Sidebar.scss
+++ b/web/src/components/Sidebar/_Sidebar.scss
@@ -181,14 +181,6 @@ $row--size: calc(#{$row--height} - #{$sidebar-sections-padding});
 	}
 }
 
-.footer-assets {
-	margin-right: 10%;
-}
-
-.footer-wallet {
-	margin-left: 10%;
-}
-
 @media screen and (max-width: 375px) {
 	.mobile-trade-wrapper {
 		.pro-trade-footer-icon {
@@ -200,6 +192,10 @@ $row--size: calc(#{$row--height} - #{$sidebar-sections-padding});
 			height: 65px !important;
 		}
 	}
+	.sidebar-bottom-button-trade {
+		height: 130%;
+		width: 20% !important;
+	}
 }
 
 @media screen and (max-width: 450px) and (min-width: 375px) {
@@ -210,8 +206,22 @@ $row--size: calc(#{$row--height} - #{$sidebar-sections-padding});
 		}
 		.quick-trade-field,
 		.pro-trade-field {
-			width: 82px !important;
-			height: 82px !important;
+			width: 75px !important;
+			height: 75px !important;
+		}
+	}
+	.sidebar-bottom-button-trade {
+		height: 135%;
+		width: 18% !important;
+	}
+}
+
+@media screen and (max-width: 550px) and (min-width: 450px) {
+	.mobile-trade-wrapper {
+		.quick-trade-field,
+		.pro-trade-field {
+			width: 85px !important;
+			height: 85px !important;
 		}
 	}
 }
